# MyUrls-Rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflow/: build_and_release.yml
.github/workflows/: build.yml  build_and_release.yml  docker-build-push.yml  release.yml  rust.yml
src/: main.rs
