[package]
name = "myurls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.23.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"
url = "2.3.1"
